--- a/preset-models/3.config
+++ b/preset-models/3.config
@@ -71,7 +71,7 @@ CONFIG_PACKAGE_luci-app-firewall=y
 # CONFIG_PACKAGE_luci-app-mtwifi is not set
 # CONFIG_PACKAGE_luci-app-mwan3 is not set
 # CONFIG_PACKAGE_luci-app-mwan3helper is not set
-CONFIG_PACKAGE_luci-app-nat6-helper=y
+# CONFIG_PACKAGE_luci-app-nat6-helper is not set
 # CONFIG_PACKAGE_luci-app-netdata is not set
 # CONFIG_PACKAGE_luci-app-nextdns is not set
 # CONFIG_PACKAGE_luci-app-nfs is not set
